components/ua/ua-dev-tools/overlays/prod/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ua-dev-tools
spec:
  template:
    spec:
      containers:
        - name: ua-dev-tools
          image: ghcr.io/isisbusapps/ua-dev-tools@sha256:3d62b0c0c8a906a1ea74bef33c09dfc1dd6d9621308ba8df08758bf3cf3802ce
